smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/use/use-requires-newline.smithy
// Parse error at line 6, column 24 near `use`: Expected a line break
$version: "1.0"

namespace foo.baz

use smithy.example#Foo use smithy.example#Baz
